Submited changes from upstream to Mini.

--- a/S2 - Funciones, manejo de archivos y visualizacion/S2.LE1/LECTURA - Algoritmica y analitica de datos.ipynb
+++ b/S2 - Funciones, manejo de archivos y visualizacion/S2.LE1/LECTURA - Algoritmica y analitica de datos.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La analítica de datos es un área que, de forma muy gruesa, se puede resumir en la siguiente misión: identificar una pregunta de negocio y desarrollar una herramienta analítica que provea insumos para responderla a partir de los datos, de una forma relevante para la organización. Sin embargo, no es tan transparente qué es una pregunta de negocio o una herramienta analítica, ni cómo llegar de una a la otra. En ese sentido, los retos son:"
+    "La analítica de datos, de forma muy gruesa, implica identificar una pregunta de negocio y desarrollar una solución analítica que provea insumos para responderla a partir de los datos disponibles. Esto conlleva procesos iterativos de exploración y preparación de datos, así como selección y evaluación de modelos, e implementación de un entregable final, que puede ser un reporte, una aplicación o un tablero de control. Sin embargo, no es tan transparente cómo definir una pregunta de negocio o una herramienta analítica adecuada, ni cómo llegar de una a la otra. El pensamiento algorítmico constituye un apoyo importante para estructurar los procesos necesarios para abordar proyectos complejos de analítica de datos. En ese sentido, algunos retos son:"
    ]
   },
   {
@@ -39,34 +39,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Los datos no están listos para ser usados y su manejo es muy técnico: puede que los datos no existan y haya que diseñar la manera de obtenerlos. Luego, implementar el proceso de recolección, verificar que estén bien, buscar formas seguras, eficientes y escalables para almacenarlos, de manera que se puedan usar fácilmente a lo largo del tiempo en aquellas dependencias donde se necesiten."
+    "* Los datos no están listos para ser usados y su manejo es muy técnico: puede que los datos no existan y haya que diseñar la manera de obtenerlos. Luego, implementar el proceso de recolección, verificar que los formatos y tipos de datos sean adecuados, manejar datos erroneos y faltates, identificar formas seguras, eficientes y escalables para almacenarlos, de manera que se puedan usar fácilmente a lo largo del tiempo en aquellas dependencias donde se necesiten."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Existen muchos métodos y técnicas de análisis para diferentes condiciones y propósitos: existen formas de modelar problemas sin utilizar datos, otras que combinan modelos y datos y otras que se fundamentan primordialmente en los datos:</br></br>\n",
+    "* Existen diversos métodos y técnicas de análisis para diferentes propósitos. Seleccionar adecuadamente el tipo de métodos a utilizar es una tarea que requiere conocimiento técnico y experiencia práctica: algunos modelos se concentran en entender y dar sentido a la información que está directamente en los datos (modelos descriptivos); otros buscan entender relaciones entre variables o estimar posibles comportamientos futuros a partir de los datos, tratando de ir más allá de la información explícita allí contenida (modelos predictivos); finalmente, existen técnicas que buscan utilizar esos datos para encontrar y evaluar alternativas de solución o decisión para responder de manera adecuada ante una situación dada (modelos prescriptivos). Adicionalmente, al interior de cada una de estas familias, se debe seleccionar una técnica específica. Por ejemplo, un modelo de clasificación en lugar de uno de regresión, o un modelo de simulación en lugar de uno de optimización, según la pregunta de negocio que se busca resolver.\n",
     "\n",
-    "  * hay técnicas que se concentran en entender y dar sentido a la información que está directamente en los datos (modelos descriptivos);</br></br>\n",
+    "* Una vez seleccionada una técnica específica, es necesario seleccionar las variables que se tendrán en cuenta, los subconjuntos de datos a utilizar (por ejemplo, para etrenar y validar modelos), los parámetros que puedan requerir los modelos seleccionados. Para esto, resulta crucial implementar una serie de experimentos que permitan evaluar cuáles modelos, variables y parámetros conducen a conclusiones válidas y/o mejor desempeño según métricas que dependen de la pregunta de negocio. La ejecución de estos experimentos es una tarea repetitiva que se ajusta perfectamente a las fortalezas que ofrece la programación. Así, el analista debe tener la claridad (en términos de negocio) de saber qué técnicas considerar y qué experimentos plantear, así como la habilidad técnica de programar rutinas que ejecuten los experimentos y generen reportes adecuados para el análisis. Esto, por supuesto, requiere un entendimiento profundo de lo que se busca con la pregunta de negocio y un conocimiento del funcionamiento, requerimientos y supuestos de los modelos que se podrían llegar a utilizar.\n",
     "\n",
-    "  * otras buscan entender relaciones entre variables o estimar posibles comportamientos futuros a partir de los datos, tratando de ir más allá de la información explícita allí contenida (modelos predictivos);</br></br>\n",
+    "* Solucionar el problema va más allá de reportar el resultado de un modelo. Con frecuencia, el interés de los tomadores de decisiones no es un resultado numérico para el momento, sino un proceso o sistema que les permita: mejorar su entendimiento de la organización y los procesos de toma de decisiones; y tener herramientas de navegación para abordar problemas de decisión no solo para los datos de hoy, sino a lo largo del tiempo, lo cual implica un tipo de solución diferente (ej., una aplicación de software) y unos retos frente al mantenimiento de la misma.</br></br>\n",
     "\n",
-    "  * finalmente, existen técnicas que buscan utilizar esos datos para encontrar y evaluar alternativas de solución o decisión para responder de manera adecuada ante una situación dada (modelos prescriptivos).</br></br>\n",
-    "\n",
-    "  Existen técnicas orientadas a un cierto tipo de datos (que cumplan ciertos supuestos), un cierto tipo de preguntas, o un cierto tipo de contexto. La elección de qué tipo de modelo usar responde a la combinación de dos elementos:</br></br>\n",
-    "\n",
-    "  * un entendimiento muy profundo de lo que se busca con la pregunta de negocio;</br></br>\n",
-    "\n",
-    "  * un conocimiento del funcionamiento, requerimientos y supuestos de los modelos que se podrían llegar a utilizar.</br></br>\n",
-    "\n",
-    "* Solucionar el problema va más allá de reportar el resultado de un modelo. Con frecuencia, el interés de los tomadores de decisiones no es un resultado numérico para el momento, sino un proceso o sistema que les permita:</br></br>\n",
-    "\n",
-    "  * mejorar su entendimiento de la organización y los procesos de toma de decisiones;</br></br>\n",
-    "\n",
-    "  * tener herramientas de navegación para abordar problemas de decisión no solo para los datos de hoy, sino a lo largo del tiempo, lo cual implica un tipo de solución diferente y unos retos frente al mantenimiento de la misma.</br></br>\n",
-    "\n",
-    "  Normalmente, la implementación de una unidad de analítica de datos en una organización implica capacitación del personal y transformaciones de los procesos y la cultura, sumados a la instalación y mantenimiento de la plataforma tecnológica necesaria."
+    "* Finalmente, la implementación de una unidad de analítica de datos en una organización normalmente implica capacitación del personal y transformaciones de los procesos y la cultura, sumados a la instalación y mantenimiento de la plataforma tecnológica necesaria."
    ]
   },
   {
@@ -137,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
