--- a/S1 - Bienvenida, estructuras de datos y de control/S1.LE2/LECTURA - Por que Python.ipynb
+++ b/S1 - Bienvenida, estructuras de datos y de control/S1.LE2/LECTURA - Por que Python.ipynb
@@ -8,6 +8,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-input",
+     "thebe-init"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "# Por precaución, cambiamos el directorio activo de Python a aquel que contenga este notebook\n",
+    "if \"PAD-book\" in os.listdir():\n",
+    "    os.chdir(r\"PAD-book/Laboratorio-Computacional-de-Analytics/S1 - Bienvenida, estructuras de datos y de control/S1.LE2/\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -208,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
