--- a/S4 - Explorar, modificar y visualizar bases de datos/S4.TU3/TUTORIAL - Visualizacion intermedia.ipynb
+++ b/S4 - Explorar, modificar y visualizar bases de datos/S4.TU3/TUTORIAL - Visualizacion intermedia.ipynb
@@ -9,6 +9,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fea9dda",
+   "metadata": {
+    "tags": [
+     "hide-input",
+     "thebe-init"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "# Por precaución, cambiamos el directorio activo de Python a aquel que contenga este notebook\n",
+    "if \"PAD-book\" in os.listdir():\n",
+    "    os.chdir(r\"PAD-book/Laboratorio-Computacional-de-Analytics/S4 - Explorar, modificar y visualizar bases de datos/S4.TU3/\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b6297364",
    "metadata": {},
