--- a/S7 - Visualizacion e interactividad/S7.TU1/TUTORIAL - Visualizacion avanzada.ipynb
+++ b/S7 - Visualizacion e interactividad/S7.TU1/TUTORIAL - Visualizacion avanzada.ipynb
@@ -8,6 +8,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-input",
+     "thebe-init"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "# Por precaución, cambiamos el directorio activo de Python a aquel que contenga este notebook\n",
+    "if \"PAD-book\" in os.listdir():\n",
+    "    os.chdir(r\"PAD-book/Laboratorio-Computacional-de-Analytics/S7 - Visualizacion e interactividad/S7.TU1/\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
