Submited changes from upstream to Mini.

--- a/S5 - Extraer, transformar y cargar datos/S5.TU2/TUTORIAL - Unir bases de datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU2/TUTORIAL - Unir bases de datos.ipynb
@@ -287,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Debemos agregar a `df`las columnas de `df2` según coincidencia de índices uno a uno, preservar todas las filas de `df` y solo las filas que coinciden de `df2`."
+    "Debemos agregar a `df` las columnas de `df2` según coincidencia de índices uno a uno, preservar todas las filas de `df` y solo las filas que coinciden de `df2`."
    ]
   },
   {
@@ -496,7 +496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Debemos agregar a `df`las columnas de `df2` según coincidencia de índices uno a $n$, preservar todas las filas de `df` y solo las filas que coinciden de `df2`."
+    "Debemos agregar a `df` las columnas de `df2` según coincidencia de índices uno a $n$, preservar todas las filas de `df` y solo las filas que coinciden de `df2`."
    ]
   },
   {
@@ -750,7 +750,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Uniones $n$ a 1 "
+    "#### Uniones $n$ a uno"
    ]
   },
   {
@@ -818,9 +818,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Debemos unir los `DataFrame` de la celda de código en una relación $n$ a $n$ entre las columnas `\"Tutoriales\"`. Además debemos emplear todas las coincidencias.\n",
+    "Debemos unir los `DataFrame` de la celda de código en una relación $n$ a $n$ entre las columnas `\"Deporte\"`. Además debemos emplear todas las coincidencias.\n",
     "\n",
-    "Debemos agregar a `df`las columnas de `df2` según coincidencia de índices $n$ a $n$, preservar todas las filas de `df` y todas las filas de `df2`.\n",
+    "Debemos agregar a `df` las columnas de `df2` según coincidencia de índices $n$ a $n$, preservar todas las filas de `df` y todas las filas de `df2`.\n",
     "\n",
     "Utilizamos el método `merge`: "
    ]
